Added JavaScript file

--- a/Week2/slideshow.html
+++ b/Week2/slideshow.html
@@ -1,8 +1,9 @@
 <html>
     <head>
         <title>Slide Show Example</title>
+        <script src="js/slideshow.js"></script>
     </head>
-    <body>
+    <body onload="main()">
         <h1>Slide Show Viewer</h1>
         <div>
             <img />
