Programmatically loaded viewer image

--- a/Week2/slideshow.html
+++ b/Week2/slideshow.html
@@ -6,7 +6,7 @@
     <body onload="main()">
         <h1>Slide Show Viewer</h1>
         <div>
-            <img />
+            <img id="viewerImg"/>
             <div>
                 <button>Previous</button> <button>Next</button>
             </div>
