Added style sheet

--- a/Week2/slideshow.html
+++ b/Week2/slideshow.html
@@ -2,6 +2,7 @@
     <head>
         <title>Slide Show Example</title>
         <script src="js/slideshow.js"></script>
+        <link rel="stylesheet" href="css/slideshow.css" />
     </head>
     <body onload="main()">
         <h1>Slide Show Viewer</h1>
