Style tweaks and added image list

--- a/Week2/slideshow.html
+++ b/Week2/slideshow.html
@@ -6,7 +6,7 @@
     </head>
     <body onload="main()">
         <h1>Slide Show Viewer</h1>
-        <div>
+        <div class="viewer">
             <img id="viewerImg"/>
             <div>
                 <button>Previous</button> <button>Next</button>
