Added previous and next functionality

--- a/Week2/slideshow.html
+++ b/Week2/slideshow.html
@@ -9,7 +9,7 @@
         <div class="viewer">
             <img id="viewerImg"/>
             <div>
-                <button>Previous</button> <button>Next</button>
+                <button onclick="previousButtonClicked()">Previous</button> <button onclick="nextButtonClicked()">Next</button>
             </div>
         <div>
     </body>
