--- a/Week2/slideshow.html
+++ b/Week2/slideshow.html
@@ -9,7 +9,8 @@
         <div class="viewer">
             <img id="viewerImg"/>
             <div>
-                <button onclick="previousButtonClicked()">Previous</button> <button onclick="nextButtonClicked()">Next</button>
+                <div class="button previous" onclick="previousButtonClicked()"></div>
+                <div class="button next" onclick="nextButtonClicked()"></div>
             </div>
         <div>
     </body>
