Moved previous and next buttons up onto the image

--- a/Week2/slideshow.html
+++ b/Week2/slideshow.html
@@ -8,7 +8,7 @@
         <h1>Slide Show Viewer</h1>
         <div class="viewer">
             <img id="viewerImg"/>
-            <div>
+            <div class="controls">
                 <div class="button previous" onclick="previousButtonClicked()"></div>
                 <div class="button next" onclick="nextButtonClicked()"></div>
             </div>
