Added caption to viewer

--- a/Week2/slideshow.html
+++ b/Week2/slideshow.html
@@ -12,6 +12,7 @@
                 <div class="button previous" onclick="previousButtonClicked()"></div>
                 <div class="button next" onclick="nextButtonClicked()"></div>
             </div>
+            <div class="caption"></div>
         <div>
     </body>
 </html>
